Removing - Updates to support Delete